--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         <h2>Contact</h2>
         <h3>+91 787483783743 | eventcollab@gmail.com</h3>
         <p>9th street Avenue Park, Trichy, 625620</p>
+        <p>Copyright © 2024 EventCollab</p>
     </center>
 </footer>
 </body>
