--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Events</title>
+    <title>Events!</title>
     <!-- Flaticon Website -->
     <link rel="icon" href="./img/date.png">
 </head>
